se agrega clase de Context y se agregan context-params a la configuracion

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,21 @@
     <url-pattern>/hola</url-pattern>
   </servlet-mapping>
 
+  <!--Conext params-->
+
+  <context-param>
+    <param-name>dbUrl</param-name>
+    <param-value>jdbc:postgresql://localhost:5432/bootcamp_market</param-value>
+  </context-param>
+  <context-param>
+    <param-name>dbUser</param-name>
+    <param-value>postgres</param-value>
+  </context-param>
+  <context-param>
+    <param-name>dbPassword</param-name>
+    <param-value>postgres</param-value>
+  </context-param>
+
+  <!--Conext params-->
+
 </web-app>
